--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body{
   font-family: 'Roboto' ;
   color: #5F6368;
 }
+
 .clearfix:after{
   content: "";
   display: table;
@@ -18,17 +19,18 @@ body{
   float: left;
 }
 
-/* Header */
-.header-top{
-  height: 50px;
+/* Header-top */
+.header-top,
+.header-bottom{
+  /* height: 50px; */
   width: 100%;
-  background-color: lightyellow;
-  margin: 20px;
+  padding: 20px 20px 0 20px;
 }
 
 .header-top h2{
   vertical-align: middle;
   line-height: 50px;
+  font-weight: normal;
   margin-left: 20px;
 }
 
@@ -36,7 +38,25 @@ body{
   height: 50px;
 }
 
-.header-top a{
+.header-top a,
+.header-bottom a{
   text-decoration: none;
-  color: #5F6368;
+  color: #63676C;
+}
+
+/* Header-bottom */
+.header-bottom {
+  padding-bottom: 5px;
+  border-bottom: 1px solid #CBCBCB;
+}
+
+.header-bottom li{
+  display: inline-block;
+  list-style: none;
+  padding-right: 20px;
+  font-weight: bold;
+}
+
+.header-bottom li:last-child {
+  float: right;
 }
