--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,6 @@ body{
   margin: 0px auto;
   padding-top: 100px;
   padding-bottom: 50px;
-  /* color: #535353; */
   color: #3C4043;
 }
 
@@ -92,15 +91,25 @@ body{
 /* Footer */
 footer{
   width: 100%;
-  height: 60px;
+  height: 50px;
   background-color: #F0F0F0;
+}
+
+.footer-info{
+  width: 80%;
+  margin: 0 auto;
 }
 
 .footer-info li{
   display: inline-block;
   list-style: none;
+  font-size: 12px;
+  line-height: 50px;
+  padding-right: 10px;
 }
+
 .footer-info li a{
   text-decoration: none;
-
+  font-size: 12px;
+  color: #787878;
 }
